# backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: b75797d4e645_init.py
app/: config.py  main.py
app/db/: session.py
app/ml/: inference.py  loader.py
app/models/: pitch.py
app/routers/: games.py  health.py  predict.py  replay.py  ws.py
app/schemas/: common.py  pitch.py
app/services/: mlb_poller.py  predictor.py  replay.py
docs/: api-response.md  getting-started.md
